# EIR-auto-GP

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: coverage.yml  release.yml  test.yml
docs/: automake_docs.py  conf.py  index.rst  quickstart.rst
docs/a_using_eir_auto_gp/: a_basic_tutorial.py  b_multiple_phenotypes.py  c_feature_selection_approaches.py
docs/doc_modules/: experiments.py  generate_diagrams.py  utils.py
docs/source/_static/css/: custom.css
docs/tutorials/: tutorial_index.rst
docs/tutorials/a_using_eir_auto_gp/: 01_basic_tutorial.rst  02_multi_tutorial.rst  03_feature_selection_tutorial.rst
docs/tutorials/tutorial_files/01_basic_tutorial/commands/: AUTO_1.txt  AUTO_2.txt  analysis_folder.txt  eirautogp_help.txt  feature_selection_folder.txt  label_file.txt  tutorial_folder.txt
docs/tutorials/tutorial_files/01_basic_tutorial/figures/: CAD_test_results.csv  CAD_test_results_2.csv  CAD_validation_results.csv  CAD_validation_results_2.csv
docs/tutorials/tutorial_files/02_multi_tutorial/commands/: AUTO_2_DATA.txt  AUTO_2_age.txt  AUTO_2_hdl.txt  AUTO_2_ldl.txt  AUTO_2_tg.txt
docs/tutorials/tutorial_files/02_multi_tutorial/figures/: age_test_results.csv  hdl_test_results.csv  ldl_test_results.csv  tg_test_results.csv
docs/tutorials/tutorial_files/03_feature_selection_tutorial/data_run/commands/: AUTO_1_DATA.txt  input_folder.txt
docs/tutorials/tutorial_files/03_feature_selection_tutorial/gwas+bo/commands/: AUTO_FS_GWAS+BO.txt
docs/tutorials/tutorial_files/03_feature_selection_tutorial/gwas+bo/figures/: CAD_test_results.csv
docs/tutorials/tutorial_files/03_feature_selection_tutorial/gwas->dl/commands/: AUTO_FS_GWAS->DL.txt
docs/understanding_eir_auto_gp/: custom_config.rst  feature_selection_methods.rst  understanding_eir_auto_gp_index.rst
eir_auto_gp/: run.py
eir_auto_gp/analysis/: run_analysis.py
eir_auto_gp/modelling/: configs.py  dl_feature_selection.py  feature_selection.py  feature_selection_utils.py  gwas_bo_feature_selection.py  gwas_feature_selection.py  run_modelling.py
eir_auto_gp/multi_task/: run_multi_task.py
eir_auto_gp/multi_task/analysis/: run_analysis.py
eir_auto_gp/multi_task/modelling/: configs.py  run_modelling.py
eir_auto_gp/post_analysis/: iterative_complexity_analysis.py  run_complexity_analysis.py  run_effect_analysis.py  run_post_analysis.py
eir_auto_gp/post_analysis/common/: data_preparation.py
eir_auto_gp/post_analysis/complexity_analysis/: modelling.py  viz.py
eir_auto_gp/post_analysis/effect_analysis/: genotype_effects.py  gxe_interaction_effects.py  interaction_effects.py  viz_genotype_effects.py  viz_interaction_effects.py  viz_interaction_effects_graph.py  viz_interaction_effects_point.py
eir_auto_gp/predict/: data_preparation_utils.py  pack.py  prepare_data.py  run_predict.py  sync.py
eir_auto_gp/preprocess/: converge.py  genotype.py  gwas_pre_selection.py  tabular.py
eir_auto_gp/single_task/: run_single_task.py
eir_auto_gp/single_task/analysis/: run_analysis.py
eir_auto_gp/single_task/modelling/: configs.py  dl_feature_selection.py  feature_selection.py  feature_selection_utils.py  gwas_bo_feature_selection.py  gwas_feature_selection.py  run_modelling.py
misc/: release.py
src/eir_auto_gp/multi_task/: custom_config.py  run_multi_task.py
src/eir_auto_gp/multi_task/analysis/: run_analysis.py
src/eir_auto_gp/multi_task/modelling/: configs.py  hyperparameters.py  injections.py  output_configs.py  run_modelling.py  tensor_broker.py
src/eir_auto_gp/post_analysis/: iterative_complexity_analysis.py  run_complexity_analysis.py  run_effect_analysis.py
src/eir_auto_gp/post_analysis/common/: data_preparation.py
src/eir_auto_gp/post_analysis/complexity_analysis/: modelling.py  viz.py
src/eir_auto_gp/post_analysis/effect_analysis/: genotype_effects.py  gxe_interaction_effects.py  interaction_effects.py  viz_genotype_effects.py  viz_interaction_effects_graph.py  viz_interaction_effects_point.py
src/eir_auto_gp/predict/: data_preparation_utils.py  pack.py  prepare_data.py  run_predict.py  serve_predict.py
src/eir_auto_gp/preprocess/: converge.py  genotype.py  gwas_pre_selection.py  tabular.py
src/eir_auto_gp/single_task/: run_single_task.py
src/eir_auto_gp/single_task/analysis/: run_analysis.py
src/eir_auto_gp/single_task/modelling/: configs.py  dl_feature_selection.py  feature_selection.py  gwas_bo_feature_selection.py  gwas_feature_selection.py  run_modelling.py
src/eir_auto_gp/utils/: shared_modelling_utils.py  utils.py
tests/: .test_durations  conftest.py  test_gwas_bo_feature_selection.py  test_gwas_pre_selection.py  test_modelling.py  test_multi_task_modelling.py  test_output_configs.py  test_pack_and_predict.py  test_post_analysis.py  test_prepare_predict_data.py  test_snp_mapping.py
tests/test_data/: penncath.bed  penncath.bim  penncath.csv  penncath.fam
tests/test_data/ids/: test_ids.txt  test_ids_plink.txt  train_ids.txt  train_ids_plink.txt  valid_ids.txt  valid_ids_plink.txt
(+3 files in other folders)
