[tool.poetry]
name = "EIR-auto-GP"
version = "0.0.6-alpha"
description = ""
authors = ["Arnor Sigurdsson <arnor-sigurdsson@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "eir_auto_gp"}]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
eir-dl = {git = "https://git@github.com/arnor-sigurdsson/EIR.git", rev = "cbeba4aec72a57c520fb0d31b0dfef349cb2825b"}
plink-pipelines = "^0.2.0"
scikit-optimize = "^0.9.0"
qmplot = "^0.3.2"
pandas = "^2.2.1"
xgboost = "^2.0.3"
statsmodels = "^0.14.0"
lxml = "^5.2.1"
nxviz = "^0.7.4"
networkx = "^3.2.1"
psutil = "^5.9.8"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
jupyter = "^1.0.0"
pre-commit = "^3.7.0"
tox = "^4.14.2"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.1"
sphinx-rtd-theme = "^2.0.0"
pdf2image = "^1.17.0"
gdown = "^5.1.0"
coverage = "^7.4.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eirautogp = "eir_auto_gp.single_task.run_single_task:main"
eirautogpmulti = "eir_auto_gp.multi_task.run_multi_task:main"
eirautogwas = "eir_auto_gp.preprocess.gwas_pre_selection:main"
eirautopostanalysis = "eir_auto_gp.post_analysis.run_post_analysis:main"

[tool.isort]
profile = "black"