[project]
name = "EIR-auto-GP"
version = "0.9.0"
description = ""
authors = [{name = "Arnor Sigurdsson", email = "arnor-sigurdsson@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-optimize>=0.9.0",
    "qmplot>=0.3.2",
    "pandas>=2.2.2",
    "xgboost>=2.0.3",
    "statsmodels>=0.14.0",
    "lxml>=5.2.2",
    "nxviz>=0.7.4",
    "networkx>=3.3",
    "psutil>=5.9.8",
    "rich>=13.7.1",
    "aislib>=0.3.0",
    "polars>=1.15.0",
    "eir-dl>=0.23.0",
    "torch>=2.7.1",
    "plink-pipelines>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "tox>=4.23.2",
    "ruff>=0.8.0",
    "coverage>=7.6.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "deptry>=0.23.1",
    "jupyter>=1.0.0",
    "sphinx>=7.3.7",
    "sphinx-copybutton>=0.5.1",
    "sphinx-rtd-theme>=2.0.0",
    "pdf2image>=1.17.0",
    "gdown>=5.2.0",
    "pytest-split>=0.9.0",
    "vulture>=2.14",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
eirautogp = "eir_auto_gp.single_task.run_single_task:main"
eirautogpmulti = "eir_auto_gp.multi_task.run_multi_task:main"
eirautogwas = "eir_auto_gp.preprocess.gwas_pre_selection:main"
eirautopostanalysis = "eir_auto_gp.post_analysis.run_post_analysis:main"
eirautogppack = "eir_auto_gp.predict.pack:main"
eirautogppredict = "eir_auto_gp.predict.run_predict:main"
eirautogpsync = "eir_auto_gp.predict.prepare_data:main"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["eir_auto_gp"]

[tool.ruff.lint.per-file-ignores]
"docs/doc_modules/generate_diagrams.py" = ["ALL"]
"misc/release.py" = ["B904"]
"src/eir_auto_gp/post_analysis/iterative_complexity_analysis.py" = ["B023"]
"src/eir_auto_gp/preprocess/converge.py" = ["E402", "B904"]

[tool.deptry]
ignore = ["DEP003"]

[tool.uv.sources]
plink-pipelines = { git = "https://github.com/arnor-sigurdsson/plink_pipelines.git", rev = "more-chunk-size-options" }
